--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,17 @@
   </head>
 
   <body>
+  <% if user_signed_in? %> 
+    <div class="flex justify-end gap-3 p-3 border-r-4 items-center">
+      <p>Welcome <%= current_user.email %>     </p>
+      <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "border-solid border-blue-600 rounded-md p-1 bg-red-300 hover:bg-green-200 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-opacity-50" %> 
+    </div> 
+    
+  <% end %>
+  <div class="flex justify-center">
+    <p class="notice text-center text-green-600 text-2xl w-1/4"><%= notice %></p> 
+  </div>
     <%= yield %>
+  <p class="alert text-center text-red-700"><%= alert %></p> 
   </body>
 </html>
