--- a/app/javascript/components/Nav.css
+++ b/app/javascript/components/Nav.css
@@ -21,6 +21,8 @@
   text-transform: capitalize;
   text-align: left;
   text-decoration: none;
+  font-weight: 500;
+  font-family: 'Inter', sans-serif;
   padding: 5px;
   background-color: #96c036;
   width: 100%;
