--- a/app/javascript/components/Nav.css
+++ b/app/javascript/components/Nav.css
@@ -1,56 +1,132 @@
+@media only screen and (max-width: 576px) {
 
-.logo {
-  width: 120px;
-  align-self: center;
-  margin-bottom: 25%;
-  margin-top: 25%;
+  #hide-1{
+    display: none;
+  }
+
+  .white {
+    background-color: white !important;
+  }
+  .logo {
+    width: 120px;  
+  }
+
+  .dropdown{
+    display: block;
+  }
+
+  .TabListContainer {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+  } 
+  .StyledNavLink {
+    display: block;
+    color: white;
+    text-transform: capitalize;
+    text-align: left;
+    text-decoration: none;
+    font-size: 1rem;
+    font-weight: 500;
+    font-family: 'Inter', sans-serif;
+    padding: 5px;
+    background-color: #96c036;
+    width: 100%;
+    margin-left: 12px;
+  }
+  .social-group{
+    display: none;
+  }
+  .tiny {
+    font-size: 0.8rem;
+    margin-left: 12px;
+    color: black;
+  }
 }
 
-.TabListContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-around;
-  width: 25%;
-  height: 100vh;
-}
+@media only screen and (min-width: 576px) {
 
-.StyledNavLink {
-  display: block;
-  color: white;
-  text-transform: capitalize;
-  text-align: left;
-  text-decoration: none;
-  font-weight: 500;
-  font-family: 'Inter', sans-serif;
-  padding: 5px;
-  background-color: #96c036;
-  width: 100%;
-  margin-left: 12px;
-}
+  .StyledNavLink {
+    display: block;
+    color: white;
+    text-transform: capitalize;
+    text-align: left;
+    text-decoration: none;
+    font-weight: 500;
+    font-family: 'Inter', sans-serif;
+    padding: 5px;
+    background-color: #96c036;
+    width: 100%;
+    height:40px;
+    margin-left: 12px;
+  }
 
-.active {
-  color: black;
-  background-color: white;
-}
 
-.social-group ul {
-  list-style: none;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-  gap: 10px;
-  margin-top: 50px;
-  margin-left: 12px;
-  margin-bottom: 24px;
-}
 
-.social img {
-  width: 15px;
-}
+  .white {
+    background-color: white !important;
+  }
 
-.tiny {
-  font-size: 0.8rem;
-  margin-left: 12px;
-}
+  .dropdown{
+    display: none;
+  }
+
+
+  .logo {
+    width: 120px;
+    align-self: center;
+    margin-bottom: 25%;
+    margin-top: 25%;
+  }
+
+  .TabListContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    width: 25%;
+    height: 100vh;
+  }
+
+  .StyledNavLink {
+    display: block;
+    color: white;
+    text-transform: capitalize;
+    text-align: left;
+    text-decoration: none;
+    font-weight: 500;
+    font-family: 'Inter', sans-serif;
+    padding: 5px;
+    background-color: #96c036;
+    width: 100%;
+    margin-left: 12px;
+  }
+
+  .active {
+    color: black;
+    background-color: white;
+  }
+
+  .social-group ul {
+    list-style: none;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    gap: 10px;
+    margin-top: 50px;
+    margin-left: 12px;
+    margin-bottom: 24px;
+  }
+
+  .social img {
+    width: 15px;
+  }
+
+  .tiny {
+    font-size: 0.8rem;
+    margin-left: 12px;
+    color: black;
+  }
+
+} 
