--- a/app/javascript/components/Nav.css
+++ b/app/javascript/components/Nav.css
@@ -1,17 +1,17 @@
 @media only screen and (max-width: 576px) {
-
-  #hide-1{
+  #hide-1 {
     display: none;
   }
 
   .white {
     background-color: white !important;
   }
+
   .logo {
-    width: 120px;  
+    width: 120px;
   }
 
-  .dropdown{
+  .dropdown {
     display: block;
   }
 
@@ -19,7 +19,8 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-around;
-  } 
+  }
+
   .StyledNavLink {
     display: block;
     color: white;
@@ -34,43 +35,31 @@
     width: 100%;
     margin-left: 12px;
   }
-  .social-group{
+
+  .social-group {
     display: none;
   }
+
   .tiny {
     font-size: 0.8rem;
     margin-left: 12px;
     color: black;
   }
+
+  #dropdownUser1:hover {
+    color: blue;
+    cursor: pointer;
+  }
 }
 
 @media only screen and (min-width: 576px) {
-
-  .StyledNavLink {
-    display: block;
-    color: white;
-    text-transform: capitalize;
-    text-align: left;
-    text-decoration: none;
-    font-weight: 500;
-    font-family: 'Inter', sans-serif;
-    padding: 5px;
-    background-color: #96c036;
-    width: 100%;
-    height:40px;
-    margin-left: 12px;
-  }
-
-
-
   .white {
     background-color: white !important;
   }
 
-  .dropdown{
+  .dropdown {
     display: none;
   }
-
 
   .logo {
     width: 120px;
@@ -128,5 +117,4 @@
     margin-left: 12px;
     color: black;
   }
-
-} 
+}
